shop branch added-27-01-2023

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
     <div class="row bgwrap">
       <div class="col-12 col-sm-12 col-md-12 text-center">
         <h1 class="text-white">
-          We Care at NuCare
+          @NuCare We Care
         </h1>
       </div>
     </div>
@@ -391,11 +391,11 @@
           <div class="social-links">
             <a class="twitter click"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://wa.me/0129110065" class="linkedin click"><i class="fa-brands fa-whatsapp"></i></a>
-            <a class="facebook click"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/nucarepharma/" class="facebook click"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/nucarepharma/?igshid=YmMyMTA2M2Y=" class="instagram click"><i
                 class="fa-brands fa-instagram"></i></a>
-            <a class="google-plus click"><i class="fa-brands fa-google"></i></a>
-            <a class="linkedin click"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://g.co/kgs/5r92Hf" class="google-plus click"><i class="fa-brands fa-google"></i></a>
+            <a href="https://www.linkedin.com/company/nucare-pharmacy/" class="linkedin click"><i class="fa-brands fa-linkedin"></i></a>
 
           </div>
         </div>
@@ -436,6 +436,9 @@
           <p>
             22-L Mukim 14,Jalan Paya Terubung
             Paya Terubong,11060 Ayer Itam, Pulau Pinang.
+          </p>
+          <p>
+            Juta Villa, No 76A, Persiaran Camellia 4, Tanah Rata, 39000 Tanah Rata, Pahang.
           </p>
           <p>
             <a href="tel:0129110065">
